--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@payloadcms/db-postgres": "^0.1.13",
     "@payloadcms/next-payload": "^0.1.9",
     "@payloadcms/richtext-slate": "^1.2.0",
+    "@vercel/postgres": "^0.5.1",
     "next": "14.0.3",
     "payload": "^2.2.1",
     "react": "^18",
