--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@payloadcms/db-postgres": "^0.1.13",
     "@payloadcms/next-payload": "^0.1.9",
     "@payloadcms/richtext-slate": "^1.2.0",
+    "@playwright/test": "^1.40.0",
     "@vercel/postgres": "^0.5.1",
     "next": "13",
     "payload": "^2.2.1",
@@ -30,6 +31,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "typescript": "^5"
+    "typescript": "latest",
+    "checkly": "latest",
+    "ts-node": "latest"
   }
 }
