--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
   },
   "dependencies": {
     "@payloadcms/bundler-webpack": "^1.0.5",
-    "@payloadcms/db-postgres": "^0.1.13",
-    "@payloadcms/next-payload": "^0.1.9",
-    "@payloadcms/richtext-slate": "^1.2.0",
-    "@playwright/test": "^1.40.0",
+    "@payloadcms/db-mongodb": "^1.1.0",
+    "@payloadcms/db-postgres": "^0.2.0",
+    "@payloadcms/next-payload": "^0.1.10",
+    "@payloadcms/richtext-slate": "^1.2.1",
     "@vercel/postgres": "^0.5.1",
-    "next": "13",
-    "payload": "^2.2.1",
+    "next": "^13",
+    "payload": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -31,8 +31,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "typescript": "latest",
-    "checkly": "latest",
-    "ts-node": "latest"
+    "ts-node": "latest",
+    "typescript": "latest"
   }
 }
