--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@payloadcms/next-payload": "^0.1.10",
     "@payloadcms/richtext-slate": "^1.2.1",
     "@vercel/postgres": "^0.5.1",
+    "moment": "^2.29.4",
     "next": "^13",
     "payload": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "sharp": "^0.32.6"
+    "sass": "^1.69.5",
+    "sharp": "^0.32.6",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/escape-html": "^1.0.4",
