--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,14 @@
       {
         "name": "next"
       }
-    ],
-   
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/env.mjs"
+  ],
   "exclude": ["node_modules"]
 }
